# jupyter-sidebar-chatbot

./: .cursorignore  .gitignore  FEAT_TODO.md  NOTE.md  PROJECT.md  README.md  TESTING_TODO.md  Untitled.ipynb  Untitled1.ipynb  launch.py  package-lock.json  package.json  requirements.txt  run_backend.py  setup.py  setup_env.ps1  setup_env.sh  uv_config_guide.md  测试.ipynb
jupyter-lab-extension/: MANIFEST.in  README.md  Untitled.ipynb  Untitled1.ipynb  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  tsconfig.tsbuildinfo
jupyter-lab-extension/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
jupyter-lab-extension/jupyter-simple-extension/: __init__.py  _version.py
jupyter-lab-extension/jupyter-simple-extension/labextension/: build_log.json  package.json
jupyter-lab-extension/lib/: api-client.js  cell-context-tracker.js  commands.js  globals.js  icons.js  index.d.ts  index.js  markdown-config.js  popup-menu-manager.d.ts  popup-menu-manager.js  sidebar-widget.d.ts  sidebar-widget.js
jupyter-lab-extension/lib/chat/: chat-history-manager.d.ts  chat-history-manager.js  input-handler.js  message-renderer.d.ts  message-renderer.js  popup-menu-manager.d.ts  popup-menu-manager.js  settings-manager.d.ts  settings-manager.js  sidebar-widget.d.ts  sidebar-widget.js
jupyter-lab-extension/lib/core/: api-client.js  globals.d.ts  icons.js
jupyter-lab-extension/lib/handlers/: history-handler.d.ts  history-handler.js  input-handler.d.ts  input-handler.js  message-handler.d.ts  message-handler.js  (+4 more)
jupyter-lab-extension/src/: cell-context-tracker.ts  commands.ts  globals.ts  index.ts  markdown-config.ts  popup-menu-manager.ts  sidebar-widget.ts  test-markdown.ts  types.ts
jupyter-lab-extension/style/: index.css
(+294 files in other folders)
